# lab2_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pkg_parte_1/share/pkg_parte_1/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pkg_parte_2/share/pkg_parte_2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pkg_parte_3/: parametros.py  path_sqrt.txt  publicador_velocidad.py
install/pkg_parte_3/lib/pkg_parte_3/: controlador_angular.py  follow_the_carrot.py  (+4 more)
log/: latest_build
src/pkg_parte_1/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/pkg_parte_1/launch/: parte1_launch.py
src/pkg_parte_1/nodes/: controlador.py  coordenadas.txt  pose_loader.py  publicador_vel.py  robot.py
src/pkg_parte_1/pkg_parte_1/: controlador_P.py  controlador_PI.py  coordenadas.txt  parametros.py  pose_loader.py  publicador_vel.py  robot.py
src/pkg_parte_2/: CMakeLists.txt  package.xml
src/pkg_parte_2/launch/: navegacion_pasillo.xml
src/pkg_parte_2/nodes/: controlador_pasillo.py  distancia_sensor.py  publicador_setpoint.py  publicador_vel.py
src/pkg_parte_3/: CMakeLists.txt
src/pkg_parte_3/launch/: follow_the_carrot.py  launch_quimi.py
src/pkg_parte_3/nodes/: controlador_angular.py  follow_the_carrot.py  mostrar_ruta.py  obteniendo_error.py  parametros.py  publicador_ruta.py  publicador_velocidad.py
(+36 files in other folders)
